--- a/index.html
+++ b/index.html
@@ -219,7 +219,10 @@
 			<div id="portfolio-wrap">
 				<!-- portfolio item -->
 				<div class="portfolio-item grid web">
-					<div class="portfolio">
+<div class="portfolio" title="Sistema de coordenadas
+Distância entre dois pontos
+Vetores no plano
+Operações com vetores" >
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Geometria_Analitica/Aula1%20GA.pptx" class="portfolio-image">
 						<img src="img/works/1.png" alt="" />
 						<div class="portfolio-overlay">
@@ -234,7 +237,10 @@
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
 				<div class="portfolio-item grid web">
-					<div class="portfolio">
+					<div class="portfolio" title="O plano
+  Produto escalar
+  Ângulo entre vetores
+">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Geometria_Analitica/Aula2%20GA.pptx" class="portfolio-image">
 						<img src="img/works/1.png" alt="" />
 						<div class="portfolio-overlay">
@@ -249,7 +255,11 @@
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
 				<div class="portfolio-item grid web">
-					<div class="portfolio">
+					<div class="portfolio" title="O plano
+  Projeção de vetores
+  Equação paramétrica da reta
+  Equação cartesiana da reta
+">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Geometria_Analitica/Aula3%20GA.pptx" class="portfolio-image">
 						<img src="img/works/1.png" alt="" />
 						<div class="portfolio-overlay">
@@ -264,7 +274,10 @@
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
 				<div class="portfolio-item grid  web">
-					<div class="portfolio">
+					<div class="portfolio" title="O plano
+  Ângulo entre Retas
+  Distância de um Ponto a uma Reta
+">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Geometria_Analitica/Aula4%20GA.pptx" class="portfolio-image">
 						<img src="img/works/1.png" alt="" />
 						<div class="portfolio-overlay">
@@ -279,7 +292,13 @@
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
 				<div class="portfolio-item grid web">
-					<div class="portfolio">
+					<div class="portfolio" title="O espaço
+  Sistema de coordenadas
+  Distância entre pontos
+  Vetores no espaço
+  Produto vetorial
+  Produto misto
+">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Geometria_Analitica/Aula5%20GA.pptx" class="portfolio-image">
 						<img src="img/works/1.png" alt="" />
 						<div class="portfolio-overlay">
@@ -294,7 +313,11 @@
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
 				<div class="portfolio-item grid web">
-					<div class="portfolio">
+					<div class="portfolio" title="O espaço
+  Equação do plano
+  Equações paramétricas do plano
+  Equações paramétricas da reta
+">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Geometria_Analitica/Aula6%20GA.pptx"  class="portfolio-image">
 						<img src="img/works/1.png" alt="" />
 						<div class="portfolio-overlay">
@@ -309,7 +332,13 @@
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
 				<div class="portfolio-item grid web">
-					<div class="portfolio">
+					<div class="portfolio" title="O espaço
+  Interseção de planos
+  Interseção de Retas e Planos
+  Interseção de Retas
+  Distância de um Ponto a um Plano
+  Distância de um Ponto a uma Reta
+">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Geometria_Analitica/Aula7%20GA.pptx" class="portfolio-image">
 						<img src="img/works/1.png" alt="" />
 						<div class="portfolio-overlay">
@@ -325,7 +354,10 @@
 				<p></p>
 				<!-- portfolio item -->
 				<div class="portfolio-item grid print">
-					<div class="portfolio">
+					<div class="portfolio" title="Matrizes
+ Tipos especiais de matrizes
+ Operações com matrizes
+">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Algebra_Linear/Alg_Aula01.ppt" class="portfolio-image">
 						<img src="img/works/2.png" alt="" />
 						<div class="portfolio-overlay">
@@ -340,7 +372,10 @@
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
 				<div class="portfolio-item grid print">
-					<div class="portfolio">
+					<div class="portfolio" title="Sistemas de Equações Lineares
+  Sistemas e Matrizes
+  Operações Elementares
+  Forma Escada">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Algebra_Linear/Alg_Aula02.ppt" class="portfolio-image">
 						<img src="img/works/2.png" alt="" />
 						<div class="portfolio-overlay">
@@ -355,7 +390,10 @@
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
 				<div class="portfolio-item grid print">
-					<div class="portfolio">
+					<div class="portfolio" title="Determinantes
+Matriz Adjunta
+Matriz Inversa
+">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Algebra_Linear/Alg_Aula03.pptx" class="portfolio-image">
 						<img src="img/works/2.png" alt="" />
 						<div class="portfolio-overlay">
@@ -370,7 +408,10 @@
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
 				<div class="portfolio-item grid print">
-					<div class="portfolio">
+					<div class="portfolio" title="Espaços vetoriais
+Sub-espaços vetoriais
+Combinação linear
+Dependência e Independência linea">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Algebra_Linear/Alg_Aula05.ppt" class="portfolio-image">
 						<img src="img/works/2.png" alt="" />
 						<div class="portfolio-overlay">
@@ -385,7 +426,8 @@
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
 				<div class="portfolio-item grid print">
-					<div class="portfolio">
+					<div class="portfolio" title="Transformações Lineares
+Transformações no Plano">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Algebra_Linear/Alg_Aula06.ppt" class="portfolio-image">
 						<img src="img/works/2.png" alt="" />
 						<div class="portfolio-overlay">
@@ -400,7 +442,8 @@
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
 				<div class="portfolio-item grid print">
-					<div class="portfolio">
+					<div class="portfolio" title="Autovalores e Autovetores
+Polinômio característico">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Algebra_Linear/Alg_Aula07.ppt" class="portfolio-image">
 						<img src="img/works/2.png" alt="" />
 						<div class="portfolio-overlay">
@@ -415,7 +458,8 @@
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
 				<div class="portfolio-item grid print">
-					<div class="portfolio">
+					<div class="portfolio" title="Diagonalização de Operadores
+Polinômio Minimal">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Algebra_Linear/Alg_Aula08.ppt" class="portfolio-image">
 						<img src="img/works/2.png" alt="" />
 						<div class="portfolio-overlay">
@@ -430,7 +474,9 @@
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
 				<div class="portfolio-item grid print">
-					<div class="portfolio">
+					<div class="portfolio" title="Produto Interno
+Processo de Ortogonalização de Gram-Schmidt
+Complemento Ortogonal">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Algebra_Linear/Alg_Aula09.ppt" class="portfolio-image">
 						<img src="img/works/2.png" alt="" />
 						<div class="portfolio-overlay">
@@ -445,7 +491,9 @@
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
 				<div class="portfolio-item grid print">
-					<div class="portfolio">
+					<div class="portfolio" title="Tipos Especiais de Operadores Lineares
+Diagonalização de Operadores Auto-Adjuntos 
+Caracterização dos Operadores Ortogonais">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Algebra_Linear/Alg_Aula10.ppt" class="portfolio-image">
 						<img src="img/works/2.png" alt="" />
 						<div class="portfolio-overlay">
