--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 	<div class="row">
 		<div id="filters" class="span12">
 			<ul class="clearfix">
-				<li><a href="#" data-filter="*" class="active">
+				<li><a href="#" data-filter=".all" class="active">
 				<h5>All</h5>
 				</a></li>
 				<li><a href="#" data-filter=".web">
@@ -218,7 +218,7 @@
 		<div class="span12">
 			<div id="portfolio-wrap">
 				<!-- portfolio item -->
-				<div class="portfolio-item grid web">
+				<div class="portfolio-item grid all web">
 <div class="portfolio" title="Sistema de coordenadas
 Distância entre dois pontos
 Vetores no plano
@@ -236,7 +236,7 @@ Operações com vetores" >
 				</div>
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
-				<div class="portfolio-item grid web">
+				<div class="portfolio-item grid all web">
 					<div class="portfolio" title="O plano
   Produto escalar
   Ângulo entre vetores
@@ -254,7 +254,7 @@ Operações com vetores" >
 				</div>
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
-				<div class="portfolio-item grid web">
+				<div class="portfolio-item grid all web">
 					<div class="portfolio" title="O plano
   Projeção de vetores
   Equação paramétrica da reta
@@ -273,7 +273,7 @@ Operações com vetores" >
 				</div>
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
-				<div class="portfolio-item grid  web">
+				<div class="portfolio-item grid all web">
 					<div class="portfolio" title="O plano
   Ângulo entre Retas
   Distância de um Ponto a uma Reta
@@ -291,7 +291,7 @@ Operações com vetores" >
 				</div>
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
-				<div class="portfolio-item grid web">
+				<div class="portfolio-item grid all web">
 					<div class="portfolio" title="O espaço
   Sistema de coordenadas
   Distância entre pontos
@@ -312,7 +312,7 @@ Operações com vetores" >
 				</div>
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
-				<div class="portfolio-item grid web">
+				<div class="portfolio-item grid all web">
 					<div class="portfolio" title="O espaço
   Equação do plano
   Equações paramétricas do plano
@@ -331,7 +331,7 @@ Operações com vetores" >
 				</div>
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
-				<div class="portfolio-item grid web">
+				<div class="portfolio-item grid all web">
 					<div class="portfolio" title="O espaço
   Interseção de planos
   Interseção de Retas e Planos
@@ -353,7 +353,7 @@ Operações com vetores" >
 				<!-- end portfolio item -->
 				<p></p>
 				<!-- portfolio item -->
-				<div class="portfolio-item grid print">
+				<div class="portfolio-item grid all print">
 					<div class="portfolio" title="Matrizes
  Tipos especiais de matrizes
  Operações com matrizes
@@ -371,7 +371,7 @@ Operações com vetores" >
 				</div>
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
-				<div class="portfolio-item grid print">
+				<div class="portfolio-item grid all print">
 					<div class="portfolio" title="Sistemas de Equações Lineares
   Sistemas e Matrizes
   Operações Elementares
@@ -389,7 +389,7 @@ Operações com vetores" >
 				</div>
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
-				<div class="portfolio-item grid print">
+				<div class="portfolio-item grid all print">
 					<div class="portfolio" title="Determinantes
 Matriz Adjunta
 Matriz Inversa
@@ -407,7 +407,7 @@ Matriz Inversa
 				</div>
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
-				<div class="portfolio-item grid print">
+				<div class="portfolio-item grid all print">
 					<div class="portfolio" title="Espaços vetoriais
 Sub-espaços vetoriais
 Combinação linear
@@ -425,7 +425,7 @@ Dependência e Independência linea">
 				</div>
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
-				<div class="portfolio-item grid print">
+				<div class="portfolio-item grid all print">
 					<div class="portfolio" title="Transformações Lineares
 Transformações no Plano">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Algebra_Linear/Alg_Aula06.ppt" class="portfolio-image">
@@ -441,7 +441,7 @@ Transformações no Plano">
 				</div>
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
-				<div class="portfolio-item grid print">
+				<div class="portfolio-item grid all print">
 					<div class="portfolio" title="Autovalores e Autovetores
 Polinômio característico">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Algebra_Linear/Alg_Aula07.ppt" class="portfolio-image">
@@ -457,7 +457,7 @@ Polinômio característico">
 				</div>
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
-				<div class="portfolio-item grid print">
+				<div class="portfolio-item grid all print">
 					<div class="portfolio" title="Diagonalização de Operadores
 Polinômio Minimal">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Algebra_Linear/Alg_Aula08.ppt" class="portfolio-image">
@@ -473,7 +473,7 @@ Polinômio Minimal">
 				</div>
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
-				<div class="portfolio-item grid print">
+				<div class="portfolio-item grid all print">
 					<div class="portfolio" title="Produto Interno
 Processo de Ortogonalização de Gram-Schmidt
 Complemento Ortogonal">
@@ -490,7 +490,7 @@ Complemento Ortogonal">
 				</div>
 				<!-- end portfolio item -->
 				<!-- portfolio item -->
-				<div class="portfolio-item grid print">
+				<div class="portfolio-item grid all print">
 					<div class="portfolio" title="Tipos Especiais de Operadores Lineares
 Diagonalização de Operadores Auto-Adjuntos 
 Caracterização dos Operadores Ortogonais">
