--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 				<!-- navigation -->
 				<nav class="pull-right nav-collapse collapse">
 				<ul id="menu-main" class="nav">
-					<li><a title="team" href="#about">About</a></li>
-					<li><a title="services" href="#services">IP exams and site</a></li>
-					<li><a title="works" href="#works">slides avlc</a></li>
-					<li><a title="blog" href="#contacts">Contact</a></li>
+					<li><a title="About Me" href="#about">About</a></li>
+					<li><a title="contents of introduction to programming" href="#services">IP exams and site</a></li>
+					<li><a title="AVLC discipline slides" href="#works">slides avlc</a></li>
+					<li><a title="How to contact me" href="#contacts">Contact</a></li>
 				</ul>
 				</nav>
 			</div>
