--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ Matriz Inversa
 					<div class="portfolio" title="Espaços vetoriais
 Sub-espaços vetoriais
 Combinação linear
-Dependência e Independência linea">
+Dependência e Independência linear">
 						<a href="http://cin.ufpe.br/~jrvn/archives/Slides-AVLC/Algebra_Linear/Alg_Aula05.ppt" class="portfolio-image">
 						<img src="img/works/2.png" alt="" />
 						<div class="portfolio-overlay">
