--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<!-- Responsive navbar -->
 				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</a>
-				<h1 class="brand"><a title="José Roberto Vieira Nunes" href="http://cin.ufpe.br/~jrvn">JRVN</a></h1>
+				<h1 class="brand"><a title="José Roberto Vieira Nunes" href="http://rnunes.me">JRVN</a></h1>
 				<!-- navigation -->
 				<nav class="pull-right nav-collapse collapse">
 				<ul id="menu-main" class="nav">
