--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<!-- Responsive navbar -->
 				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</a>
-				<h1 class="brand"><a title="José Roberto Vieira Nunes" href="http://rnunes.me">JRVN</a></h1>
+				<h1 class="brand"><a title="José Roberto Vieira Nunes" href="http://cin.ufpe.br/~jrvn">JRVN</a></h1>
 				<!-- navigation -->
 				<nav class="pull-right nav-collapse collapse">
 				<ul id="menu-main" class="nav">
@@ -619,7 +619,7 @@ Caracterização dos Operadores Ortogonais">
 					<h5><strong>Geometria Analitica - Reis e Silva</strong></h5>
 					<p>
 					</p>
-					<a href="https://go o.gl/YNhgLJ"  target="_blank" class="more">Click to download</a>
+					<a href="https://goo.gl/YNhgLJ"  target="_blank" class="more">Click to download</a>
 				</div>
 			</div>
 		</div>
