--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@ Caracterização dos Operadores Ortogonais">
 	<div id="contacts" class="row">
 		<div class="span6 offset3">
 			<ul class="social-networks">
-				<li><a href="http://instagr.am/betoonuness" target="_blank" title="Instagram profile"><i class="icon-circled icon-bgdark icon-instagram icon-2x"></i></a></li>
+				<li><a href="http://instagr.am/betoonuness" target="_blank" title="Instagram"><i class="icon-circled icon-bgdark icon-instagram icon-2x"></i></a></li>
 				<li><a href="http://fb.com/chillminotaurs5" target="_blank" title="Facebook profile"><i class="icon-circled icon-bgdark icon-facebook icon-2x"></i></a></li>
 				<li><a href="mailto:jrvn@cin.ufpe.br" target="_blank" title="E-Mail"><i class="icon-circled icon-bgdark icon-envelope icon-2x"></i></a></li>
 				<li><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8026734U6" title="Curriculum lattes" target="_blank"><i class="icon-circled icon-bgdark icon-briefcase icon-2x"></i></a></li>
