separando slides de avlc por GA ou AL

--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
 	<div class="row">
 		<div id="filters" class="span12">
 			<ul class="clearfix">
-				<li><a href="#" data-filter=".all" class="active">
+				<!--li><a href="#" data-filter=".all" class="active">
 				<h5>All</h5>
-				</a></li>
+				</a></li-->
 				<li><a href="#" data-filter=".web">
 				<h5>Geometria Analitica</h5>
 				</a></li>
