--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
-          <li class="nav-item">
+          <!--li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#Books">Academic Books</a>
-          </li>
+          </li-->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#echelon" title="">Echelon &amp; reduce matrix</a>
           </li>
@@ -155,7 +155,7 @@
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Books">
+      <!--section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Books">
             <h2 class="mb-5">Academic Books</h2>
             <div class="row">
                 <ul>
@@ -245,7 +245,7 @@
                      </li>
                 </ul>
           </div>
-      </section>
+      </section-->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="echelon">
           <div class="my-auto">
             <h3>Tool developed by Marlon Reghert (MRAs) for escalation of matrices, util to see results of exercises of the discipline of Linear Algebra (MA531) taught by Professors Paulo Salgado in computer Engineering and Silvio Melo in science of Computing</h3>
