--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
   <head>
 
@@ -34,7 +34,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">JRVN</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/img-1.jpg" title="José Roberto Vieira Nunes">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/img-3.jpg" title="José Roberto Vieira Nunes">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,19 +46,20 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#knowledge">Knowledge</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
-          <!--li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#Books">Academic Books</a>
-          </li-->
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#echelon" title="">Echelon &amp; reduce matrix</a>
-          </li>
         </ul>
       </div>
+      <!--div class="idiomas">
+        <a href="pt" ><img src="img/2000px-Flag_of_Brazil.svg.png" class="img-fluid bandeirabr"></a>
+        <img src="img/290px-Flag_of_Great_Britain_(1707%E2%80%931800).svg.png" class="img-fluid bandeiraen">  
+      </div-->
     </nav>
 
     <div class="container-fluid p-0">
@@ -108,6 +109,37 @@
           </ul>
         </div>
       </section>
+        
+            <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="knowledge">
+        <div class="my-auto">
+          <h2 class="mb-5">Knowledge</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">C Language</h3>
+              <div class="subheading mb-3">C language programmer</div>
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Web developer</h3>
+              <div class="subheading mb-3">Front-end, back-end and fullstack developer</div>
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">network configuration</h3>
+              <div class="subheading mb-3">Local network configuration</div>
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Computer Technician</h3>
+              <div class="subheading mb-3">Maintenance and support on computers, software installation and operating systems</div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
@@ -151,111 +183,8 @@
               <span class="text-primary">February 2012 - December 2014</span>
             </div>
           </div>
-
         </div>
       </section>
-
-      <!--section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Books">
-            <h2 class="mb-5">Academic Books</h2>
-            <div class="row">
-                <ul>
-                    <li>
-                        <h5><strong>Algebra Linear - Steinbruch</strong></h5>
-                        <a href="https://goo.gl/ww1kbC" target="_blank" class="more">Click to download</a>
-                    </li>
-                    <br>
-                    <li>
-                        <h5><strong>Algebra Linear - Boldrini 3ªed</strong></h5>
-                        <a href="https://goo.gl/dtA8SK"  target="_blank" class="more">Click to download</a>
-                    </li>
-                    <br>
-                    <li>
-                        <h5><strong>Algoritmos: Teoria e Prática - Cormen</strong></h5>
-                        <a href="https://goo.gl/TWe73b"  target="_blank" class="more">Click to download</a>
-                    </li>
-                    <br>
-                    <li>
-                        <h5><strong>C: Como Programar - Deitel</strong></h5>
-                        <a href="https://goo.gl/KAkocf"  target="_blank" class="more">Click to download</a>
-                    </li>
-                    <br>
-                    <li>
-                        <h5><strong>C: Completo e total - Herbert Schildt</strong></h5>
-                        <a href="https://goo.gl/2VNBQH"  target="_blank" class="more">Click to download</a>
-                    </li>
-                    <br>
-                    <li>
-                        <h5><strong>Calculo 1 7ªed - James Stewart</strong></h5>
-                        <a href="https://goo.gl/PKCwVC"  target="_blank" class="more">Click to download</a>
-                    </li>
-                    <br>
-                    <li>
-                        <h5><strong>Calculo 1 - para Leigos 2ª ed</strong></h5>
-                        <a href="https://goo.gl/4YEdBn"  target="_blank" class="more">Click to download</a>
-                    </li>
-                    <br>
-                    <li>
-                        <h5><strong>Geometria Analitica - Reis e Silva</strong></h5>
-                        <a href="https://goo.gl/YNhgLJ"  target="_blank" class="more">Click to download</a>
-                    </li>
-                    <br>
-                    <li>
-                        <h5><strong>Comunicação - Kurose</strong></h5>
-                        <a href="https://goo.gl/a9NDDt"  target="_blank" class="more">Click to download</a>
-                   </li>
-                    <br>
-                   <li>
-                        <h5><strong>Halliday 9ª edição - Vol 1</strong></h5>
-                        <a href="https://goo.gl/7JzKVE"  target="_blank" class="more">Click to download</a>
-                   </li>
-                   <br>
-                   <li>
-                        <h5><strong>Halliday 9ª edição - Vol 2</strong></h5>
-                        <a href="https://goo.gl/H12BQ8"  target="_blank" class="more">Click to download</a>
-                   </li>
-                   <br>
-                   <li>
-                       <h5><strong>Halliday 9ª edição - Vol 3</strong></h5>
-                       <a href="https://goo.gl/SwM8dn"  target="_blank" class="more">Click to download</a>
-                    </li>
-                    <br>
-                    <li>
-                        <h5><strong>Halliday 9ª edição - Vol 4</strong></h5>
-                        <a href="https://goo.gl/Xy8tZW"  target="_blank" class="more">Click to download</a>
-                    </li>
-                    <br>
-                    <li>
-                        <h5><strong>Halliday 10ª edição - Vol 1</strong></h5>
-                        <a href="https://goo.gl/FqvgGg"  target="_blank" class="more">Click to download</a>
-                    </li>
-                    <br>
-                    <li>
-                        <h5><strong>Halliday 10ª edição - Vol 2</strong></h5>
-                        <a href="https://goo.gl/w4yAhB"  target="_blank" class="more">Click to download</a>
-                    </li>
-                    <br>
-                    <li>
-                        <h5><strong>Halliday 10ª edição - Vol 3</strong></h5>
-                        <a href="https://goo.gl/Fpgz7D"  target="_blank" class="more">Click to download</a>
-                    </li>
-                    <br>
-                    <li>
-                        <h5><strong>Halliday 10ª edição - Vol 4</strong></h5>
-                        <a href="https://goo.gl/EaHgnH"  target="_blank" class="more">Click to download</a>
-                     </li>
-                </ul>
-          </div>
-      </section-->
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="echelon">
-          <div class="my-auto">
-            <h3>Tool developed by Marlon Reghert (MRAs) for escalation of matrices, util to see results of exercises of the discipline of Linear Algebra (MA531) taught by Professors Paulo Salgado in computer Engineering and Silvio Melo in science of Computing</h3>
-                <div class="border">
-                    <a href=" http://cin.ufpe.br/~jrvn/echelon/" target="_blank" class="border"><h2 class="text-center font-weight-bold">CLICK HERE TO ACCESS.</h2></a>
-                </div>
-          </div>
-      </section>
-
-
     </div>
 
     <!-- Bootstrap core JavaScript -->
@@ -267,7 +196,9 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
+    <script type="text/javascript">
 
+    </script>
 
   </body>
 </html>
