--- a/pt/index.html
+++ b/pt/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
   <head>
 
@@ -11,20 +11,20 @@
     <title>Roberto Nunes</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
-    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+    <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../vendor/devicons/css/devicons.min.css" rel="stylesheet">
+    <link href="../vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/resume.css" rel="stylesheet">
+    <link href="../css/resume.css" rel="stylesheet">
 
     <!-- Custom Icon for this site -->
-    <link rel="icon" type="image/png" href="img/icone.png">
+    <link rel="icon" type="image/png" href="../img/icone.png">
 
   </head>
 
@@ -34,7 +34,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">JRVN</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/img-3.jpg" title="José Roberto Vieira Nunes">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="../img/img-3.jpg" title="José Roberto Vieira Nunes">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,22 +43,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#knowledge">Knowledge</a>
+            <a class="nav-link js-scroll-trigger" href="#knowledge">Conhecimentos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+            <a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+            <a class="nav-link js-scroll-trigger" href="#education">Formação</a>
           </li>
         </ul>
       </div>
       <div class="idiomas">
-          <img src="img/290px-Flag_of_Great_Britain_(1707%E2%80%931800).svg.png" class="img-fluid bandeiraen">
-          <a href="pt/" ><img src="img/2000px-Flag_of_Brazil.svg.png" class="img-fluid bandeirabr"></a>
+        <a href="../"><img src="../img/290px-Flag_of_Great_Britain_(1707%E2%80%931800).svg.png" class="img-fluid bandeiraen"></a>
+        <img src="../img/2000px-Flag_of_Brazil.svg.png" class="img-fluid bandeirabr">
       </div>
     </nav>
 
@@ -69,10 +69,10 @@
           <h1 class="mb-0">Roberto
             <span class="text-primary">Nunes</span>
           </h1>
-          <div class="subheading mb-5">Computer Engineering · Informatics Center, At UFPE·
+          <div class="subheading mb-5">Engenharia da Computação · Centro de Informática, UFPE ·
             <a href="mailto:name@email.com">jrvn@cin.ufpe.br</a>
           </div>
-          <p class="mb-5">My name is José Roberto Vieira Nunes and I'm an undergraduate student in Computer Engineering at Center of Informatics in Federal University of Pernambuco (CIn/UFPE) since August 2015. I was born in Mato Grosso do Sul and came to Pernambuco when I was 5 years old, here I live nowadays. I really love programming and my dream is working with Artificial Inteligence or Bioinformatics.</p>
+          <p class="mb-5">Meu nome é José Roberto Vieira Nunes e eu estou fazendo um curso de graduação em Engenharia da Computação no Centro de Informática, na Universidade Federal de Pernambuco (CIn/UFPE) desde agosto de 2015. Eu nasci em Mato Grosso do Sul e vim para Pernambuco quando eu tinha 5 anos de idade, aqui vivo atualmente. Eu realmente amo programar e meu sonho é trabalhar com Inteligência Artificial ou Bioinformática.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="http://fb.me/robert0vnunes" target="_blank">
@@ -112,30 +112,30 @@
         
             <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="knowledge">
         <div class="my-auto">
-          <h2 class="mb-5">Knowledge</h2>
+          <h2 class="mb-5">Conhecimentos</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">C Language</h3>
-              <div class="subheading mb-3">C language programmer</div>
+              <h3 class="mb-0">Linguagem C</h3>
+              <div class="subheading mb-3">Progamador Linguagem <b>C</b></div>
             </div>
           </div>
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web developer</h3>
-              <div class="subheading mb-3">Front-end, back-end and fullstack developer</div>
+              <h3 class="mb-0">Desenvolvedor Web</h3>
+              <div class="subheading mb-3">Desenvolvedor Front-end, Back-end e fullstack</div>
             </div>
           </div>
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">network configuration</h3>
-              <div class="subheading mb-3">Local network configuration</div>
+              <h3 class="mb-0">Configuração de redes</h3>
+              <div class="subheading mb-3">Configuração de redes locais</div>
             </div>
           </div>
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Computer Technician</h3>
-              <div class="subheading mb-3">Maintenance and support on computers, software installation and operating systems</div>
+              <h3 class="mb-0">Técnico em Informática</h3>
+              <div class="subheading mb-3">Manutenção de computadores, instalação de sistemas operacionais e softwares</div>
             </div>
           </div>
         </div>
@@ -143,16 +143,16 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
+          <h2 class="mb-5">Experiencia</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Federal University of Pernambuco</h3>
-              <div class="subheading mb-3">Internship - maintenance and support in Informatics</div>
-              <p>Perform operation and maintenance of micros, computer support, helpdesk, network administration</p>
+              <h3 class="mb-0">Univesridade Federal de Pernambuco - UFPE</h3>
+              <div class="subheading mb-3">Estágiário - Manutenção e suporte de infraestrutura</div>
+              <p>Realizar operação e manutenção de computadores, suporte e administração de redes</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">February 2018 - Present</span>
+              <span class="text-primary">Fevereiro de 2018 - Atualmente</span>
             </div>
           </div>
         </div>
@@ -161,26 +161,26 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
+          <h2 class="mb-5">Formação</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Federal University of Pernambuco</h3>
-              <div class="subheading mb-3">Bachelor of Computer Engineering</div>
+              <h3 class="mb-0">Universidade Federal de Pernambuco</h3>
+              <div class="subheading mb-3">Bacharelado em Engenharia da computação</div>
               <div></div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2015 - present</span>
+              <span class="text-primary">Agosto de 2015 - Atualmente</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Miguel Arraes de Alencar State Technical School</h3>
-              <div class="subheading mb-3">Computer Technician</div>
+              <h3 class="mb-0">Escola Técnica Estadual Miguel Arraes de Alencar</h3>
+              <div class="subheading mb-3">Técnico em Informática</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">February 2012 - December 2014</span>
+              <span class="text-primary">Fevereiro de 2012 - Dezembro de 2014</span>
             </div>
           </div>
         </div>
@@ -188,14 +188,14 @@
     </div>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/resume.min.js"></script>
+    <script src="../js/resume.min.js"></script>
     <script type="text/javascript">
 
     </script>
