--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Federal University of Pernambuco</h3>
-              <div class="subheading mb-3">Bachelor of Computer Engineering</div>
+              <div class="subheading mb-3">B. Eng. in Computer Engineering</div>
               <div></div>
             </div>
             <div class="resume-date text-md-right">
