--- a/pt/index.html
+++ b/pt/index.html
@@ -72,7 +72,7 @@
           <div class="subheading mb-5">Engenharia da Computação · Centro de Informática, UFPE ·
             <a href="mailto:name@email.com">jrvn@cin.ufpe.br</a>
           </div>
-          <p class="mb-5">Meu nome é José Roberto Vieira Nunes e eu estou fazendo um curso de graduação em Engenharia da Computação no Centro de Informática, na Universidade Federal de Pernambuco (CIn/UFPE) desde agosto de 2015. Eu nasci em Mato Grosso do Sul e vim para Pernambuco quando eu tinha 5 anos de idade, aqui vivo atualmente. Eu realmente amo programar e meu sonho é trabalhar com Inteligência Artificial ou Bioinformática.</p>
+          <p class="mb-5">Meu nome é José Roberto Vieira Nunes e eu sou estudante de graduação em Engenharia da Computação no Centro de Informática, na Universidade Federal de Pernambuco (CIn/UFPE) desde agosto de 2015. Eu nasci no Mato Grosso do Sul e me mudei para Pernambuco com 5 anos de idade, aqui vivo atualmente. Sou apaixonado por programação e pretendo trabalhar na area de Bioinformática.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="http://fb.me/robert0vnunes" target="_blank">
