Atualização do estagio

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </ul>
         </div>
       </section>
-        
+
             <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="knowledge">
         <div class="my-auto">
           <h2 class="mb-5">Knowledge</h2>
@@ -152,7 +152,7 @@
               <p>Perform operation and maintenance of micros, computer support, helpdesk, network administration</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">February 2018 - Present</span>
+              <span class="text-primary">February 2018 - August 2019</span>
             </div>
           </div>
         </div>
