--- a/pt/index.html
+++ b/pt/index.html
@@ -109,7 +109,7 @@
           </ul>
         </div>
       </section>
-        
+
             <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="knowledge">
         <div class="my-auto">
           <h2 class="mb-5">Conhecimentos</h2>
@@ -152,7 +152,7 @@
               <p>Realizar operação e manutenção de computadores, suporte e administração de redes</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Fevereiro de 2018 - Atualmente</span>
+              <span class="text-primary">Fevereiro de 2018 - Agosto de 2019</span>
             </div>
           </div>
         </div>
