--- a/pt/index.html
+++ b/pt/index.html
@@ -147,7 +147,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Univesridade Federal de Pernambuco - UFPE</h3>
+              <h3 class="mb-0">Universidade Federal de Pernambuco - UFPE</h3>
               <div class="subheading mb-3">Estágiário - Manutenção e suporte de infraestrutura</div>
               <p>Realizar operação e manutenção de computadores, suporte e administração de redes</p>
             </div>
