correçao do ingles

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="subheading mb-5">Computer Engineering · Informatics Center, At UFPE·
             <a href="mailto:name@email.com">jrvn@cin.ufpe.br</a>
           </div>
-          <p class="mb-5">My name is José Roberto Vieira Nunes and I'm an undergraduate student in Computer Engineering at Center of Informatics in Federal University of Pernambuco (CIn/UFPE) since August 2015. I was born in Mato Grosso do Sul and came to Pernambuco when I was 5 years old, here I live nowadays. I really love programming and my dream is working with Artificial Inteligence or Bioinformatics.</p>
+          <p class="mb-5">My name is José Roberto Vieira Nunes and I'm an undergraduate student in Computer Engineering at Center of Informatics in Federal University of Pernambuco (CIn/UFPE) since August 2015. I bornt in Mato Grosso do Sul and came to Pernambuco when I was 5 years old, here I live nowadays. I really love programming and my dream is working with Artificial Inteligence or Bioinformatics.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="http://fb.me/robert0vnunes" target="_blank">
